adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque enim, doloribus voluptatum at hic unde ratione incidunt, earum quis in, sint voluptatem vitae culpa dicta aperiam minima quae tenetur natus?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum voluptatum, ad blanditiis unde fugiat maxime cupiditate necessitatibus eveniet facere repellendus natus perspiciatis, minus molestiae recusandae nesciunt explicabo et aliquam consectetur!</p>
 </body>
 </html>
